# sweet-data

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
sweet/: __init__.py  __main__.py  cli.py
sweet/core/: __init__.py  transforms.py  workbook.py
sweet/integrations/: __init__.py
sweet/ui/: __init__.py  app.py  sweet.css  sweet.tcss  widgets.py
tests/: __init__.py  test_wikipedia_tables.py  test_workbook.py
