[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["sweet"]

[project]
name = "sweet-data"
description = "An interactive console application for data manipulation"
readme = "README.md"
keywords = [
    "data-engineering",
    "textual",
    "polars",
    "cli",
    "interactive",
    "data-manipulation",
]
license.file = "LICENSE"
authors = [{ name = "Richard Iannone", email = "riannone@me.com" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "textual>=0.41.0",
    "polars>=1.32.0",
    "duckdb>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tree-sitter-python>=0.23.6",
    "chatlas>=0.9.2",
    "anthropic>=0.62.0",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
homepage = "https://github.com/rich-iannone/sweet-data"

[project.scripts]
sweet = "sweet.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=sweet"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
exclude = ["docs", ".venv", "tests/*"]

ignore = [
    "E402", # module level import not at top of file
    "E501", # line too long (maximum 100 characters)
    "F811", # redefinition of unused name
    "E203", # whitespace before ':'
    "F841", # local variable 'name' is assigned to but never used
    "E702", # multiple statements on one line (semicolon)
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

